--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,3 @@
 <div id="videos-container" class="contents-container">
 </div>
-<a href="/videos/create.html">Save a video</a>
+<a href="/videos/create">Save a video</a>
