added video variables to index.handlebars to render videos supplied in POST / response

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,10 @@
 <div id="videos-container" class="contents-container">
+{{#each videos as |video|}}
+  <div class="video-card">
+    <div class="video-title">
+      {{video.title}}
+    </div>
+  </div>
+  {{/each}}
 </div>
 <a href="/videos/create">Save a video</a>
