--- a/views/videos/create.handlebars
+++ b/views/videos/create.handlebars
@@ -4,10 +4,12 @@
 
     <form class="input-form" action="/videos" method="post" >
       <label class="form-label" for="title">Title</label>
-      <input id="title-input" name="title" value="" />
-
+      <input id="title-input" name="title" value="{{video.title}}" />
+      {{#with video.errors.title as |error|}}
+      <span>{{error.message}}</span>
+      {{/with}}
       <label class="form-label" for="description">Description</label>
-      <textarea id="description-input" name="description"></textarea>
+      <textarea id="description-input" name="description">{{video.description}}</textarea>
 
       <button class="button submit-button" id="submit-button" type="submit">
         <p>Save a video</p>
