added URL with type string to model.  added url to POST /videos.  Update create.handlebars to have input for URL.  Updated index.handlebars to have ifram for video

--- a/views/videos/create.handlebars
+++ b/views/videos/create.handlebars
@@ -11,6 +11,9 @@
       <label class="form-label" for="description">Description</label>
       <textarea id="description-input" name="description">{{video.description}}</textarea>
 
+      <label class="form-label" for="url">URL</label>
+      <input id="url-input" name="url" value="{{video.url}}" />
+      
       <button class="button submit-button" id="submit-button" type="submit">
         <p>Save a video</p>
       </button>
