--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -4,6 +4,7 @@
     <div class="video-title">
       {{video.title}}
     </div>
+    <iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
   </div>
   {{/each}}
 </div>
