--- a/views/videos/index.handlebars
+++ b/views/videos/index.handlebars
@@ -1,11 +1,11 @@
 <div id="videos-container" class="contents-container">
-{{#each videos as |video|}}
-  <div class="video-card">
-    <div class="video-title">
-      {{video.title}}
+  {{#each videos as |video|}}
+    <div class="video-card">
+      <div class="video-title">
+        <a href="/videos/{{video._id}}">{{video.title}}</a>
+      </div>
+      <iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
     </div>
-    <iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
-  </div>
   {{/each}}
 </div>
 <a href="/videos/create">Save a video</a>
