added iframe to show.handlebars to display video url.  updated test/routes/video-test.js to include url in GET /videos/:id test

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -1,2 +1,3 @@
 <h1>{{video.title}}</h1>
 <p>{{video.description}}</p>
+<iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
