--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -1,3 +1,14 @@
-<h1>{{video.title}}</h1>
-<p>{{video.description}}</p>
-<iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
+<div class="contents-container">
+  <div class="video-card">
+
+    <div class="video-title">
+      <h1>{{video.title}}</h1>
+    </div>
+
+    /* iFrame with class video-player */
+    <iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
+    <div class="video-description">
+      <p>{{video.description}}</p>
+    </div>
+  </div>
+</div>
