updated User updating video changes the values in user-updating-video-test.js (forgot a few steps -- oops).  Added edit button to views/videos/show.handlebars

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -4,7 +4,7 @@
     <div class="video-title">
       <h1>{{video.title}}</h1>
     </div>
-
+    <a id="edit" href="/videos/{{video._id}}/edit">Edit</a>
     /* iFrame with class video-player */
     <iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
     <div class="video-description">
