Added test to test/routes/videos-test.js to assert the POST /videos/:id/deletions removes the record

--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -5,7 +5,7 @@
       <h1>{{video.title}}</h1>
     </div>
     <a id="edit" href="/videos/{{video._id}}/edit">Edit</a>
-    <form>
+    <form method="post" action="/videos/{{video._id}}/deletions">
       <input id="delete" name="delete" value="Delete" />
     </form>
     /* iFrame with class video-player */
