--- a/views/videos/show.handlebars
+++ b/views/videos/show.handlebars
@@ -6,7 +6,7 @@
     </div>
     <a id="edit" href="/videos/{{video._id}}/edit">Edit</a>
     <form method="post" action="/videos/{{video._id}}/deletions">
-      <input id="delete" name="delete" value="Delete" />
+      <input id="delete" type="submit" value="Delete" />
     </form>
     /* iFrame with class video-player */
     <iframe class="video-player" src="{{video.url}}" frameborder="0" allowfullscreen></iframe>
